--- a/codeception.yml
+++ b/codeception.yml
@@ -1,29 +1,18 @@
-actor: Tester
 paths:
     tests: tests
-    log: tests/_output
+    output: tests/_output
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
 settings:
-    bootstrap: _bootstrap.php
-    colors: true
-    memory_limit: 1024M
+  bootstrap: _bootstrap.php
+coverage:
+    enabled: true
+    include:
+        - src/*
+    exclude:
+        - src/icon.svg
+actor_suffix: Tester
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
-params:
-  - tests/_craft/.env
-modules:
-  config:
-    Yii2:
-      configFile: 'tests/_craft/config/test.php'
-  enabled:
-    - Db:
-        dsn: 'mysql:host=localhost;dbname=%TEST_DB_NAME%;'
-        user: '%TEST_DB_USER%'
-        password: '%TEST_DB_PASS%'
-        dump: 'tests/_data/dump.sql'
-        populate: true
-        cleanup: false
-        reconnect: false
