--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "fasterimage/fasterimage": "~1.2"
   },
   "require-dev": {
-    "codeception/codeception": "~2.3.3"
+    "codeception/codeception": "^2.4"
   },
   "repositories": [
     {
