Fixed Call to a member function find() on bool

--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.4",
     "craftcms/cms": "^3.0.0",
-    "fasterimage/fasterimage": "~1.2"
-  },
-  "require-dev": {
-    "codeception/codeception": "^2.4"
+    "fasterimage/fasterimage": "^1.5"
   },
   "repositories": [
     {
@@ -45,11 +42,6 @@
     ],
     "psr-4": {
       "humandirect\\amplify\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "humandirect\\amplify\\tests\\": "tests/"
     }
   },
   "extra": {
